--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,3 +17,24 @@ build-backend = "pdm.backend"
 
 [tool.pdm.build]
 package-dir = "src"
+
+[tool.pdm.dev-dependencies]
+dev = [
+    "black>=23.3.0",
+    "isort>=5.12.0",
+    "flake8>=6.0.0",
+]
+
+[tool.black]
+exclude = """"
+/(
+    venv
+)/
+"""
+
+[tool.pdm.scripts]
+check = { composite = [
+    "isort ./src",
+    "black ./src",
+    "flake8 ./src",
+] }
