--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,9 @@ description = ""
 authors = [
     {name = "", email = ""},
 ]
-dependencies = []
+dependencies = [
+    "requests>=2.31.0",
+]
 requires-python = ">=3.11"
 readme = "README.md"
 license = {text = "MIT"}
