--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ authors = [
 ]
 dependencies = [
     "requests>=2.31.0",
+    "bs4>=0.0.1",
+    "lxml>=4.9.2",
 ]
 requires-python = ">=3.11"
 readme = "README.md"
