--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "bs4>=0.0.1",
     "lxml>=4.9.2",
     "aiohttp>=3.8.4",
+    "selenium>=4.10.0",
 ]
 requires-python = ">=3.8.1"
 readme = "README.md"
